--- a/indec.html
+++ b/indec.html
@@ -14,7 +14,7 @@
 
     <section class="sobre-mi">
         <h2>Sobre mí</h2>
-        <p>Me gusta la programación, la tecnología y la inteligencia artificial.</p>
+        <p>Me gustan, la tecnología y la inteligencia artificial.</p>
     </section>
 
     <section class="boton">
