Actualizar INDEX.html: mejoras de accesibilidad y contenido

--- a/INDEX.html
+++ b/INDEX.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Mi Portafolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Johann — Portafolio</title>
+    <meta name="description" content="Portafolio personal de Johann, estudiante de Informática.">
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-
     <header>
-        <h1>Hola, soy Johann 👨‍💻</h1>
-        <p>Estudiante de Informática</p>
+        <h1>Johann — Estudiante de Informática</h1>
+        <p class="lead">Apasionado por la tecnología y la inteligencia artificial.</p>
     </header>
 
-    <section class="sobre-mi">
-        <h2>Sobre mí</h2>
-        <p>Me gustan, la tecnología y la inteligencia artificial.</p>
-    </section>
+    <main>
+        <section class="sobre-mi" aria-labelledby="sobre-mi-title">
+            <h2 id="sobre-mi-title">Sobre mí</h2>
+            <p>Hola, soy Johann. Me interesa el desarrollo web, el aprendizaje automático y las soluciones creativas con código.</p>
+        </section>
 
-    <section class="boton">
-        <button onclick="mostrarMensaje()">Haz clic aquí</button>
-    </section>
+        <section class="acciones" aria-labelledby="acciones-title">
+            <h2 id="acciones-title" class="sr-only">Acciones</h2>
+            <button type="button" onclick="mostrarMensaje()" aria-label="Mostrar mensaje">Haz clic aquí</button>
+        </section>
+    </main>
 
     <footer>
-        <p>© 2026 - Mi primer proyecto web</p>
+        <p>© 2026 Johann — Proyecto personal</p>
     </footer>
 
     <script src="script.js"></script>
